# devbox

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc.cjs  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: release-drafter.yml
.github/workflows/: release.yml
buildScripts/: compressBinary.mjs
plugins/: copyMonacoEditor.ts
scripts/: compress.mjs  update-version.sh
src/: App.module.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: http_fetch.rs  mod.rs  rss.rs  webhook.rs
src/Components/: AppRoutes.tsx  CopyButton.tsx  Settings.tsx
src/Components/Monaco/: Editor.tsx  utils.tsx
src/Components/Sidebar/: Tool.tsx  constants.ts  index.tsx  styles.module.css  types.tsx
src/ComponentsNew/: AppRoutes.tsx  ErrorBoundary.tsx
src/Features/bundlephobia/: Bundlephobia.tsx
src/Features/cron/: Cron.tsx
src/Features/dashboard/: Dashboard.tsx  styles.module.css
src/Features/dns/: DnsLookup.tsx
src/Features/epoch/: Epoch.tsx
src/Features/escape/: BackslashEscape.tsx
src/Features/graphiql/: GraphiQL.tsx
src/Features/har/: HarViewer.tsx  NetworkFilters.tsx  NetworkTable.tsx  RequestDetails.tsx  har.module.css
src/Features/hmac/: HmacGenerator.tsx
src/Features/ids/: Ids.tsx
src/Theme/: index.ts
src/components/: AppRoutes.tsx  CopyButton.tsx  Settings.tsx  WebInterstitial.tsx
src/constants/: app.ts  sidebar.tsx  tools.tsx
src/hooks/: index.ts  useAnalytics.ts  useFile.tsx  useKeyboardShortcuts.tsx  useRouteAnim.tsx  useSidebarShortcuts.tsx  useSidebarState.tsx
src/types/: city-timezones.d.ts  countries-and-timezones.d.ts  diff.d.ts  lesspass.d.ts
src/utils/: avatar.ts  confirm.ts  dragRegion.ts  functions.ts  isTauri.ts  keyboard.ts  openExternal.ts  store.ts
(+157 files in other folders)
