[package]
name = "devbox"
version = "2.0.0"
description = "Developer Utilities"
authors = ["smithg09"]
license = "MIT"
repository = "https://github.com/smithg09/devbox"
default-run = "devbox"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.6.2", features = [ "macos-private-api", "protocol-asset", "devtools", "tray-icon" ] }
tauri-plugin-store = { version = "2.3.0" }
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-opener = "2.3.0"
window-vibrancy = "0.6.0"
md-5 = "0.10.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
rayon = "1.7.0"
dashmap = { version = "5.4.0", features = ["serde"] }
surge-ping = "0.8"
tokio = { version = "1.21.2", features = ["full"] }
# oxc = { version = "0.16.3", features = ["minifier", "transformer"] }
minify-html = "0.15.0"
fast_image_resize = "3.0.3"
image = "0.24.8"
anyhow = "1.0.79"
# once_cell = "1"
oxipng = { version = "9.0", features = [
    "parallel",
    "zopfli",
    "filetime",
], default-features = false }
webp = "0.2"
base64 = "0.21.7"
flate2 = "1.0"
quircs = "0.10.2"
imageinfo = "0.7.17"
tauri-plugin-process = "2.3.0"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"     # can experiment with 'z' as well
strip = true

[profile.dev]
incremental = false

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[package.metadata]
tauri = { icon = ["icons/icon.ico", "icons/icon.png", "icons/icon.icns"] }
